src/test/deca/context/invalid/class_null_equal.deca
//  Description : 
// 
//      Test incorrect qui attitre une valeur à null
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03
{
    null=2;
}